VisualForcePage/src/objects/Pay_List__c.object
<CustomObject>
    <fields>
        <fullName>Cheque__c</fullName>
        <label>Cheque</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Items__c</fullName>
        <label>Items</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>payment</label>
        <referenceTo>payment__c</referenceTo>
        <relationshipName>bill</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Pay List</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Pay List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pay List</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>